--- a/Intex.html
+++ b/Intex.html
@@ -6,7 +6,7 @@
     <meta name="description" content="1996 U.S TaxEstimator Demo ">
     <meta name="keywords" content="JavaScript Testing">
     <meta name="author" content="Abin O Varghese">   
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<main>
@@ -65,6 +65,6 @@
   			</tr>  			
 
         </table>
-<script src="../js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
