closed main tag

--- a/Intex.html
+++ b/Intex.html
@@ -64,7 +64,8 @@
     			<td><input id="total" type="text" value=0></input></td>
   			</tr>  			
 
-        </table>
+		</table>
+	</main>	
 <script src="script.js"></script>
 </body>
 </html>
